Adding web and models projects.

--- a/BlazorApp/BlazorApp.Api/BlazorApp.Api.csproj
+++ b/BlazorApp/BlazorApp.Api/BlazorApp.Api.csproj
@@ -20,4 +20,8 @@
     <Folder Include="Dtos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorApp.Models\BlazorApp.Models.csproj" />
+  </ItemGroup>
+
 </Project>
